# piv2hdf

./: .gitignore  CITATION.cff  README.md  codemeta.json  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test.yml  tests.yml
examples/: 01_snapshot.ipynb  01_snapshot_advanced.ipynb  01_snapshot_davis.ipynb  01_snapshot_pivview.ipynb  README.md  meta.json
piv2hdf/: __init__.py  _logger.py  _version.py  cache.py  config.py  flags.py  interface.py  piv_params.py  postproc.py  time.py  tutorial.py  user.py  utils.py  vtk_utils.py
piv2hdf/convention/: __init__.py
piv2hdf/davis/: __init__.py  const.py  file.py  parameter.py
piv2hdf/openpiv/: __init__.py  const.py  file.py  parameter.py  tools.py
piv2hdf/openpiv/user_operations/: standard_names.py
piv2hdf/pivview/: __init__.py  const.py  nc.py  parameter.py
piv2hdf/pivview/user_operations/: __init__.py  standard_names.py
piv2hdf/resources/convention/: planar_piv_reduced.yaml  standard_attributes.yaml
piv2hdf/resources/convention/standard_name_tables/: planar_piv.yaml
piv2hdf/resources/openpiv/: openpiv_ext_translation.yaml
piv2hdf/resources/pivview/: pivview_translation.yaml
tests/: test_config.py  test_convention.py  test_logger.py  test_multiplane.py  test_parameter.py  test_plane.py  test_snapshot.py  test_user.py  test_version.py
tests/resources/: meta.json
tests/resources/davis/: dtau04.0.set
tests/resources/davis/dtau04.0/: B00001.vc7  B00002.vc7  B00003.vc7  B00004.vc7  dtau04.hdf
tests/resources/openpiv/: openpiv.par  vortex.hdf  vortex.txt
tests/resources/pivview/piv_challenge1_E/: E00A1.hdf  E00A1.vtr  piv_challenge1_E.hdf  piv_parameters.par
