[metadata]
name = piv2hdf
version = 2.0.0a1
author = Matthias Probst
author_email = matth.probst@gmail.com
description = Tool for the conversion of PIV measurements into HDF5 files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/piv2hdf
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >3.8, <3.12
include_package_data = True
install_requires =
    appdirs>=1.4.4
    numpy>=1.26.4,<2.0.0
    h5py>3.7.0
    matplotlib>=3.5.2
    pandas>=1.4.3
    tqdm>=4.64.0
    scipy
    pyyaml>=6.0
    pint
    xarray
    netCDF4>=1.7.0
    h5rdmtoolbox>=1.6.0,<=2.0.0
    ssnolib==1.3.0.2
    pivmetalib==1.1.2.0

[options.extras_require]
test =
    pylint
    pytest
    pytest-cov

vtk =
    vtk>=8.1.2
    pyevtk>=1.5.0

davis =
    lvpyio==1.3.0

complete =
    %(davis)s
    %(vtk)s
    %(test)s

[options.package_data]
piv2hdf =
    resources/convention/*.yaml
    openpiv/openpiv_translation.yaml
    resources/pivview/pivview_translation.yaml

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[coverage:run]
source = .
omit =
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    @atexit.register
